tests/analyzer/errors/local_import.tmp
fn main() {
    {
        use data.math
    }

    math.introduce()
}
